--- a/remotejobs/src/index.css
+++ b/remotejobs/src/index.css
@@ -1,2 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@200;300;400;600;800&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind base;
