--- a/remotejobs/src/index.css
+++ b/remotejobs/src/index.css
@@ -12,7 +12,7 @@ body{
   background: white;
 }
 
-li{
+/* li{
   list-style: none;
   cursor: pointer;
   position: relative;
@@ -34,5 +34,5 @@ li:hover::before{
 
 .card{
   background:#000 ;
-}
+} */
 
