--- a/remotejobs/src/index.css
+++ b/remotejobs/src/index.css
@@ -11,8 +11,8 @@
 body{
   background: white;
 }
-
-/* li{
+/* 
+li{
   list-style: none;
   cursor: pointer;
   position: relative;
@@ -27,7 +27,8 @@ body{
   right: 0;
   /* bottom: -10px; */
   color: #2a68ff;
-} */
+/* } */ */
+
 
 /* 
 .icon{
