--- a/remotejobs/src/index.css
+++ b/remotejobs/src/index.css
@@ -26,8 +26,8 @@ li{
   background: #2a68ff;
   right: 0;
   /* bottom: -10px; */
-  color: #2a68ff;
-/* } */ */
+  /* color: #2a68ff; */
+/* } */ 
 
 
 /* 
