--- a/remotejobs/src/index.css
+++ b/remotejobs/src/index.css
@@ -11,12 +11,12 @@
 body{
   background: white;
 }
-/* 
-li{
+
+/* li{
   list-style: none;
   cursor: pointer;
   position: relative;
-} */
+}  */
 
 /* li:hover::before{
   position: absolute;
@@ -25,9 +25,10 @@ li{
   width: 100%;
   background: #2a68ff;
   right: 0;
-  /* bottom: -10px; */
-  /* color: #2a68ff; */
-/* } */ 
+  bottom: -10px; 
+  color: #2a68ff; 
+} */
+
 
 
 /* 
