--- a/remotejobs/src/index.css
+++ b/remotejobs/src/index.css
@@ -12,13 +12,13 @@ body{
   background: white;
 }
 
-/* li{
+li{
   list-style: none;
   cursor: pointer;
   position: relative;
-}  */
+}  
 
-/* li:hover::before{
+li:hover::before{
   position: absolute;
   content: '';
   height: 4px;
@@ -27,7 +27,7 @@ body{
   right: 0;
   bottom: -10px; 
   color: #2a68ff; 
-} */
+} 
 
 
 
